--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Blah blah rasberry pi</title>
+		<link rel="stylesheet" type="text/css" href="/test.css">
 	</head>
 	<body>
 
