--- a/templates/files/test.html
+++ b/templates/files/test.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>HACKDAY</title>
-	<link href="examples.css" rel="stylesheet" type="text/css">
-	<script language="javascript" type="text/javascript" src="../jquery.js"></script>
-	<script language="javascript" type="text/javascript" src="../jquery.flot.js"></script>
+	<link href="/test.css" rel="stylesheet" type="text/css">
+	<script language="javascript" type="text/javascript" src="/jquery.js"></script>
+	<script language="javascript" type="text/javascript" src="/jquery.flot.js"></script>
 	<script type="text/javascript">
 
 	$(function() {
