--- a/templates/files/test.html
+++ b/templates/files/test.html
@@ -9,22 +9,13 @@
 	<script type="text/javascript">
 
 	$(function() {
+		var d1 = [
+		{% for timestamp in history: %}
+			[{{timestamp}},{{history[timestamp]}}],
+		{% endfor %}
+		];
 
-		var d1 = [];
-		for (var i = 0; i < 14; i += 0.5) {
-			d1.push([i, Math.sin(i)]);
-		}
-		for (var i = 14; i < 28; i += 0.5) {
-			d1.push([i, Math.sin(i*2)*3]);
-		}
-
-		var d2 = [[0, 3], [4, 8], [8, 5], [9, 13]];
-
-		// A null signifies separate line segments
-
-		var d3 = [[0, 12], [7, 12], null, [7, 2.5], [12, 2.5]];
-
-		$.plot("#placeholder", [ d1, d2, d3 ]);
+		$.plot("#placeholder", [ d1]);
 
 		// Add the Flot version string to the footer
 
@@ -42,7 +33,7 @@
 	<div id="content">
 
 		<div class="demo-container">
-			<div id="placeholder" class="demo-placeholder"></div>
+			<div id="placeholder" style="width:800px; height:500px"></div>
 		</div>
 
 		<p>You don't have to do much to get an attractive plot.  Create a placeholder, make sure it has dimensions (so Flot knows at what size to draw the plot), then call the plot function with your data.</p>
