--- a/templates/files/test.html
+++ b/templates/files/test.html
@@ -26,8 +26,7 @@
 </head>
 <body>
 	<div id="header">
-		<h2>POOOOO</h2>
-		{{history}}
+		<h2>history</h2>
 	</div>
 
 	<div id="content">
@@ -36,9 +35,7 @@
 			<div id="placeholder" style="width:800px; height:500px"></div>
 		</div>
 
-		<p>You don't have to do much to get an attractive plot.  Create a placeholder, make sure it has dimensions (so Flot knows at what size to draw the plot), then call the plot function with your data.</p>
-
-		<p>The axes are automatically scaled.</p>
+		<p>current temp: {{current_temp}}</p>
 
 	</div>
 
