--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -8,7 +8,7 @@
 
 	<ul id="navigation">
 	{% for pi_number in pis %}
-	<li>{{ pi_number }}</a></li>
+	<li><a href="/history/{{ pi_number }}">{{ pi_number }}</a></li>
 	{% endfor %}
 	</ul>
 
